Local Network validations - highlight fields on error - fix checkbox alignment issue with iE

--- a/public/stylesheets/sass/admin.sass
+++ b/public/stylesheets/sass/admin.sass
@@ -639,6 +639,10 @@ ul.nav_bar
   input.button
     float: right
     clear: both
+  
+  div.fieldWithErrors
+    input, textarea
+      border: 1px solid #F99
     
   fieldset
     background-color= !light_blue
@@ -709,20 +713,21 @@ ul.nav_bar
           margin: 1px 0 0 10px
     
     // next 3 styles used in roles fieldset
-    input[type="checkbox"].label_right
-      float: left
-      margin: -2px 10px 0 0
-      clear: left
+    ol.checkbox_list
+      input[type="checkbox"].label_right
+        float: left
+        margin: -2px 10px 0 0
+        clear: left
       
-    label.checkbox_label
-      width: auto
-      cursor: pointer
-      float: none
-      margin: 5px 0 0 0
+      label.checkbox_label
+        width: auto
+        cursor: pointer
+        float: none
+        margin: 5px 0 0 0
           
-    p.check_box_label_description
-      margin: 3px 0 0 24px
-      display: block
+      p.check_box_label_description
+        margin: 3px 0 0 24px
+        display: block
   
     span.cke_skin_kama
       display: block
